<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:checked="true"
            android:title="@string/home_name"/>

        <item
            android:id="@+id/nav_listing"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/listing_name"/>

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/account_name"/>



        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share_name"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting_name"/>



        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/logout_name"/>
    </group>

    <item
        android:title="@string/businesses_name"
        android:id="@+id/business">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/terms_and_conditons"
                    android:title="@string/terms_and_condition_name">
                </item>

                <item
                    android:id="@+id/help"
                    android:title="@string/help_center_name">
                </item>
            </group>
        </menu>

    </item>

</menu>