<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".account">



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frame_layout">



        </FrameLayout>

        <include
            android:id="@+id/account_toolbar"
            layout="@layout/toolbar">

        </include>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:layout_marginStart="15sp"
                    android:textColor="@color/black"
                    android:text="@string/first_name"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:layout_marginStart="15sp"
                    android:textColor="@color/black"
                    android:text="@string/last_name"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:layout_marginStart="15sp"
                    android:textColor="@color/black"
                    android:text="City"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/city_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:layout_marginStart="15sp"
                    android:textColor="@color/black"
                    android:text="Address"
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <EditText
                    android:id="@+id/address_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>




            <Button
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                android:id="@+id/saveAccount"
                android:text="@string/save_account"
                android:background="@drawable/blue_fill__rounded_color"
                android:textColor="@color/white"
                android:textSize="14dp"
              />


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>